--- a/discografia.html
+++ b/discografia.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="date" content="2025-03-05">
     <title>Discografía - Paulo Londra</title>
     <link rel="stylesheet" href="css/estilos.css">
