--- a/album1.html
+++ b/album1.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="date" content="2025-03-05">
     <title>Homerun - Paulo Londra</title>
     <link rel="stylesheet" href="css/estilos.css">
@@ -44,7 +44,7 @@
                         <div class="album-cover-large">
                             <img src="img/album1.jpg" alt="Homerun - Paulo Londra">
                         </div>
-                        <div class="album-info-large">
+                        <div class="album-info-large"><br>
                             <h2>Homerun</h2>
                             <div class="album-meta">
                                 <p><i class="far fa-calendar-alt"></i> Año: 2019</p>
