--- a/desarrollador.html
+++ b/desarrollador.html
@@ -51,16 +51,16 @@
                             <h3>Ingeniero en Sistemas Computacionales</h3>
                             <div class="contact-info">
                                 <div class="contact-item">
-                                    <i class="fas fa-envelope"></i> donaji.perez@email.com
+                                    <i class="fas fa-envelope"></i> donajimp23@gmail.com
                                 </div>
                                 <div class="contact-item">
-                                    <i class="fas fa-phone"></i> (555) 123-4567
+                                    <i class="fas fa-phone"></i> (+52) 954-141-0063
                                 </div>
                                 <div class="contact-item">
                                     <i class="fab fa-linkedin"></i> linkedin.com/in/donajimp
                                 </div>
                                 <div class="contact-item">
-                                    <i class="fas fa-map-marker-alt"></i> Ciudad de México, México
+                                    <i class="fas fa-map-marker-alt"></i> San Juan bautista Tuxtepec, Oaxaca
                                 </div>
                             </div>
                         </div>
@@ -74,6 +74,24 @@
                             <div class="skill-item">
                                 <div class="skill-name">
                                     <span>Java</span>
+                                    <span>70%</span>
+                                </div>
+                                <div class="progress-bar">
+                                    <div class="progress" style="width: 60%;"></div>
+                                </div>
+                            </div>
+                            <div class="skill-item">
+                                <div class="skill-name">
+                                    <span>Python</span>
+                                    <span>40%</span>
+                                </div>
+                                <div class="progress-bar">
+                                    <div class="progress" style="width: 40%;"></div>
+                                </div>
+                            </div>
+                            <div class="skill-item">
+                                <div class="skill-name">
+                                    <span>C++</span>
                                     <span>90%</span>
                                 </div>
                                 <div class="progress-bar">
@@ -82,38 +100,20 @@
                             </div>
                             <div class="skill-item">
                                 <div class="skill-name">
-                                    <span>Python</span>
-                                    <span>85%</span>
-                                </div>
-                                <div class="progress-bar">
-                                    <div class="progress" style="width: 85%;"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <div class="skill-name">
-                                    <span>C++</span>
-                                    <span>75%</span>
-                                </div>
-                                <div class="progress-bar">
-                                    <div class="progress" style="width: 75%;"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <div class="skill-name">
                                     <span>JavaScript</span>
-                                    <span>80%</span>
+                                    <span>60%</span>
                                 </div>
                                 <div class="progress-bar">
-                                    <div class="progress" style="width: 80%;"></div>
+                                    <div class="progress" style="width: 60%;"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
                                 <div class="skill-name">
                                     <span>HTML/CSS</span>
-                                    <span>85%</span>
+                                    <span>100%</span>
                                 </div>
                                 <div class="progress-bar">
-                                    <div class="progress" style="width: 85%;"></div>
+                                    <div class="progress" style="width: 100%;"></div>
                                 </div>
                             </div>
                         </div>
@@ -135,7 +135,7 @@
                                     <span>Avanzado</span>
                                 </div>
                                 <div class="progress-bar">
-                                    <div class="progress" style="width: 90%;"></div>
+                                    <div class="progress" style="width: 40%;"></div>
                                 </div>
                             </div>
                         </div>
@@ -169,16 +169,16 @@
                             <h3 class="cv-section-title"><i class="fas fa-graduation-cap"></i>Formación Académica</h3>
                             <div class="education-item">
                                 <p class="item-title">Ingeniería en Sistemas Computacionales</p>
-                                <p class="item-subtitle">Instituto Tecnológico Nacional de México</p>
-                                <p class="item-date">2020 - 2024</p>
+                                <p class="item-subtitle">Instituto Tecnológico de Tuxtepec</p>
+                                <p class="item-date">2021 - 2025</p>
                                 <p class="item-description">
-                                    Especialización en Desarrollo de Software y Análisis de Datos. Promedio general: 9.2/10
+                                    Especialización en tecnologias de desarrollo para Sistemas web. Promedio general: 8.2/10
                                 </p>
                             </div>
                             <div class="education-item">
-                                <p class="item-title">Bachillerato Técnico en Informática</p>
-                                <p class="item-subtitle">Centro de Bachillerato Tecnológico Industrial y de Servicios</p>
-                                <p class="item-date">2017 - 2020</p>
+                                <p class="item-title">Bachillerato CECyTE 28 Collantes</p>
+                                <p class="item-subtitle">Centro de Bachillerato</p>
+                                <p class="item-date">2018 - 2021</p>
                             </div>
                         </div>
                         
